# villagekit

./: .gitattributes  Cargo.toml  NOTES.md  README.md
demo/: Cargo.toml
demo/src/: main.rs
engine/: Cargo.toml
engine/src/: asset.rs  assets.rs  entry.rs  lib.rs  params.rs  path.rs  product.rs  render.rs  store.rs  workspace.rs
engine/src/part/: eval.rs  mod.rs
engine/src/product/: mod.rs
engine/src/sandbox/: camera.rs  lights.rs  mod.rs
examples/: chair.rs
math/: Cargo.toml
math/src/: affine2.rs  affine3.rs  constants.rs  lib.rs  matrix2.rs  matrix3.rs  quaternion.rs  transform3.rs  vector2.rs  vector3.rs
number/: Cargo.toml
number/src/: lib.rs  macros.rs  ops.rs  traits.rs
params/: Cargo.toml
params/src/: lib.rs
product/: Cargo.toml
product/src/: lib.rs
render/: Cargo.toml
render/src/: color.rs  image.rs  instance.rs  lib.rs  material.rs  mesh.rs  object3d.rs  renderable.rs  shape.rs  transform.rs
render/src/shape/: circle.rs  cuboid.rs  mod.rs
sketches/: 001.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  five.md  four.md  three.md  two.md
src/: lib.rs
unit/: Cargo.toml
unit/src/: area.rs  dimensions.rs  length.rs  lib.rs  quantity.rs  system.rs  volume.rs
