[package]
name = "villagekit"
version.workspace = true
edition.workspace = true

[dependencies]
villagekit-number = { path = "./number" }
villagekit-math = { path = "./math" }
villagekit-product = { path = "./product" }
villagekit-render = { path = "./render" }
villagekit-unit = { path = "./unit" }
villagekit-engine = { path = "./engine" }
bevy.workspace = true

[workspace]
resolver = "2"
members = [
  "engine",
  "math",
  "number",
  "params",
  "product",
  "render",
  "unit"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
dyn-clone = "1.0.18"
glam = "0.29.2"
num-traits = "0.2.16"
serde = { version = "1.0.217", features = ["derive"] }

[workspace.dependencies.bevy]
version = "0.15.3"
features = ["jpeg"]

## https://bevyengine.org/learn/quick-start/getting-started/setup/

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
