[package]
name = "villagekit-engine"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_editor_cam = "0.5.0"
bevy_infinite_grid = "0.14.0"
ordered-float = "4.6.0"
serde_json = "1.0.134"
uuid = "1.11.0"

[dependencies.bevy]
version = "0.15"
default-features = false
features = [
  "bevy_asset",               # Provides asset functionality
  "bevy_color",               # Provides shared color types and operations
  "bevy_core_pipeline",       # Provides cameras and other basic render pipeline features
  "bevy_gilrs",               # Adds gamepad support
  "bevy_gizmos",              # Adds support for rendering gizmos
  "bevy_gltf",                # glTF support
  "bevy_mesh_picking_backend",# Provides an implementation for picking meshes
  "bevy_pbr",                 # Adds PBR rendering
  "bevy_picking",             # Provides picking functionality
  "bevy_render",              # Provides rendering functionality
  "bevy_scene",               # Provides scene functionality
  "bevy_state",               # Enable built-in global state machines
  "hdr",                      # HDR image format support
  "png",                      # PNG image format support
]
