[package]
name = "villagekit-engine"
version.workspace = true
edition.workspace = true

[dependencies]
villagekit-number = { path = "../number" }
villagekit-math = { path = "../math" }
villagekit-product = { path = "../product" }
villagekit-render = { path = "../render" }
villagekit-unit = { path = "../unit" }
bevy.workspace = true
bevy_editor_cam = "0.5.0"
bevy_infinite_grid = "0.14.0"
ordered-float = { version = "4.6.0", features = ["serde"] }
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
uuid = "1.11.0"
