[package]
name = "villagekit-render"
version.workspace = true
edition.workspace = true

[dependencies]
ordered-float = { version = "5.0.0", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
bevy_render = "0.15.3"
bevy_math = "0.15.3"
bevy_color = "0.15.3"
bevy_pbr = "0.15.3"
