[package]
name = "villagekit-render"
version.workspace = true
edition.workspace = true

[dependencies]
villagekit-math = { path = "../math" }
villagekit-number = { path = "../number" }
villagekit-unit = { path = "../unit" }
enum_dispatch = "0.3.13"
serde = { version = "1.0.217", features = ["derive"] }
bevy_asset = "0.15.3"
bevy_color = "0.15.3"
bevy_image = "0.15.3"
bevy_math = "0.15.3"
bevy_pbr = "0.15.3"
bevy_render = "0.15.3"
bevy_transform = "0.15.3"
